# foodspec

./: .CI_INDEX.md  .gitignore  .markdownlint.json  .pre-commit-config.yaml  404.html  ARCHITECTURE_AUDIT_REPORT.md  AUDIT_ADVANCED_TOPICS_COMPLETE.md  AUDIT_DOCUMENTATION_INDEX.md  AUDIT_END_TO_END_DESIGN.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_INDEX.md  AUDIT_REFACTOR_DELIVERABLES.md  AUDIT_SUMMARY.md  BRANCH_MIGRATION_PLAN.md  BUGS_AND_FIXES.md  CANONICAL_MODULE_MAP.md  CHANGELOG.md  CHEMOMETRICS_IMPLEMENTATION_SUMMARY.md  CITATION.cff  CI_HARDENING_GUIDE.md  CI_HARDENING_REPORT.md  CI_HARDENING_SUMMARY.md  CLI_REFACTORING_COMPLETE.md  CODEBASE_STATUS_SUMMARY.md  CODE_OF_CONDUCT.md  COMPLETE_FILE_CHANGES.md  CONTRIBUTING.md  DECISION_POLICY_GUIDE.md  DECISION_POLICY_IMPLEMENTATION_SUMMARY.md  DELIVERABLES.md  DELIVERY_SUMMARY.md  DEPLOYMENT_SUMMARY_v1.1.0-rc1.md  DOCS_ANALYSIS_REPORT.md  DOCS_QA_REPORT.md  DOCS_RESTRUCTURE_SUMMARY.md  DOCS_V1_READINESS.md  DOCS_VALIDATION.md  EXAMPLES_DOCUMENTATION_DELIVERY.md  EXECUTION_ENGINE_FILES.txt  EXECUTION_ENGINE_QUICKREF.md  (+76 more)
.githooks/: pre-commit
advanced_deep_learning/: index.html
api_cli_apps/: index.html
api_core/: index.html
api_features_chemometrics/: index.html
foodspec_rewrite/: ARCHITECTURE.md  DRIFT_VISUALIZATIONS.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTERPRETABILITY_VISUALIZATIONS.md  PARAMETER_LINEAGE_VISUALIZATIONS.md  PHASE3_METRICS_SUMMARY.md  PHASE4_EVALUATION_SUMMARY.md  PHASE5_NESTED_CV_SUMMARY.md  PHASE6_COMPLETION_REPORT.md  PHASE6_SUMMARY.md  PHASE7_COMPLETION_REPORT.md  PHASE_1_RELIABILITY_SUMMARY.md  PHASE_2_1_COMPLETE.md  PHASE_2_2_COMPLETE.md  PHASE_2_2_FINAL_SUMMARY.md  PHASE_2_CALIBRATION_SUMMARY.md  PHASE_8B_COMPLETION_REPORT.md  PHASE_8B_SUMMARY.md  PHASE_9_COMPLETION_REPORT.md  PHASE_9_SUMMARY.md  PIPELINE_DAG_VISUALIZER.md  README.md  REPLICATE_TEMPORAL_VISUALIZATIONS.md  REPORTING_BASE_IMPLEMENTATION.md  TEST_SUITE_COMPLETION_REPORT.md  TRUST_IMPLEMENTATION_SUMMARY.md  TRUST_SUBSYSTEM_COMPLETE.md  TRUST_VISUALIZATION_COMPLETE.md  TRUST_VIZ_QUICK_REFERENCE.md  VISUALIZATION_SUITE_SUMMARY.md  WARNING_SUPPRESSION_GUIDE.md  pyproject.toml
foodspec_rewrite/docs/: CACHE.md  FEATURE_ENGINEERING.md  FEATURE_ENGINEERING_API.md  METADATA_SCHEMA.md  NESTED_CV.md  PHASE2_PEAK_FEATURES_COMPLETE.md  PHASE3_BAND_INTEGRATION_COMPLETE.md  TRUST_SUBSYSTEM.md  visualization_api.py
foodspec_rewrite/docs/user-guide/: deployment_bundles.md  inference_prediction.md
foodspec_rewrite/examples/: bundle_export_import_demo.py  drift_demo.py  interpretability_demo.py  parameter_lineage_demo.py  pipeline_dag_demo.py  prediction_demo.py  quickstart.py  replicate_temporal_demo.py  reproducibility_badge_demo.py  trust_uncertainty_example.py
foodspec_rewrite/examples/notebooks/: trust_visualization_workflow.ipynb
foodspec_rewrite/foodspec/: __init__.py
foodspec_rewrite/foodspec/cli/: __init__.py  main.py
foodspec_rewrite/foodspec/cli/commands/: __init__.py  run.py  utils.py
foodspec_rewrite/foodspec/core/: __init__.py  artifacts.py  cache.py  data.py  manifest.py  orchestrator.py  pipeline.py  protocol.py  registry.py
foodspec_rewrite/foodspec/deploy/: __init__.py  bundle.py  predict.py
foodspec_rewrite/foodspec/features/: __init__.py  bands.py  base.py  chemometrics.py  composer.py  hybrid.py  marker_panel.py  peaks.py  selection.py
foodspec_rewrite/foodspec/io/: __init__.py  readers.py
foodspec_rewrite/foodspec/models/: __init__.py  base.py  boosting.py  calibration.py  classical.py
foodspec_rewrite/foodspec/preprocess/: __init__.py  base.py  common.py  ir.py  raman.py  recipes.py
foodspec_rewrite/foodspec/qc/: __init__.py  base.py  dataset.py  policy.py  spectral.py
foodspec_rewrite/foodspec/reporting/: __init__.py  base.py  engine.py  report.py
foodspec_rewrite/foodspec/trust/: __init__.py  abstain.py  conformal.py  evaluator.py  interpretability.py  marker_panel_link.py  permutation.py  regulatory.py  reliability.py
foodspec_rewrite/foodspec/validation/: __init__.py  evaluation.py  leakage.py  metrics.py  modeling.py  nested.py  splits.py  statistics.py
foodspec_rewrite/foodspec/viz/: __init__.py  badges.py  drift.py  interpretability.py  lineage.py  paper_styles.py  parameters.py  pipeline.py  plots.py  plots_v2.py  processing_stages.py  uncertainty.py  visualization_manager.py
foodspec_rewrite/src/foodspec/trust/: README.md  __init__.py  abstain.py  conformal.py  evaluator.py
foodspec_rewrite/tests/: test_artifact_registry_trust.py  test_artifacts.py  test_artifacts_integration.py  test_badges.py  test_bands_phase3.py  test_cache.py  test_calibration.py  test_chemometrics_phase4.py  test_cli.py  test_cli_minimal_flags.py  test_data.py  test_deploy_bundle.py  test_deploy_predict.py  test_drift.py  test_evaluate_model_cv.py  test_evaluate_model_nested_cv.py  test_evaluation_integration.py  test_feature_engineering.py  test_feature_engineering_end_to_end.py  test_feature_fit_leakage.py  test_feature_selection_stability.py  test_features_base.py  test_features_chemometrics.py  test_features_peaks.py  test_hybrid_phase5.py  test_interpretability.py  test_leakage_detection.py  test_manifest.py  test_marker_panel_phase8.py  test_metadata_schema.py  test_modeling_validation_end_to_end.py  test_modeling_validation_subsystem.py  test_models_base.py  test_models_boosting.py  test_models_calibration.py  test_models_classical.py  test_models_logistic_regression.py  test_models_random_forest.py  test_models_svm.py  test_nested_cv.py  (+42 more)
foodspec_rewrite/tests/fixtures/: minimal_protocol.yaml
foodspec_rewrite/tests/trust/: test_abstain_phase4.py  test_conformal_phase3.py  test_coverage.py  test_interpretability.py  test_marker_panel_link.py  test_regulatory.py  test_validation_trust_integration.py
(+1339 files in other folders)
