[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "foodspec"
version = "0.2.0"
description = "Gold-standard Raman and FTIR spectroscopy toolkit for food science."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "foodspec authors" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "matplotlib>=3.8",
  "typer>=0.9.0",
  "h5py>=3.11.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.4.0",
  "ruff>=0.5.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings-python>=1.10.0",
]
ml = [
  "xgboost>=1.7.0",
  "lightgbm>=4.0.0",
]
viz = [
  "matplotlib>=3.8",
]


[project.scripts]
foodspec = "foodspec.cli:app"

[project.urls]
Homepage = "https://github.com/chandrasekarnarayana/foodspec"
Documentation = "https://chandrasekarnarayana.github.io/foodspec/"
Source = "https://github.com/chandrasekarnarayana/foodspec"
Issues = "https://github.com/chandrasekarnarayana/foodspec/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/foodspec"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov=foodspec --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
  "src/foodspec/cli.py",
  "src/foodspec/preprocess/derivatives.py",
]
