[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foodspec"
version = "2.0.0-alpha"
description = "FoodSpec: Clean architecture rewrite - Protocol-driven spectroscopy framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "FoodSpec Contributors", email = "info@foodspec.dev"}
]

dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "typer>=0.9",
    "pydantic>=2.0",
    "matplotlib>=3.5",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "sphinx>=5.0",
]

ml = [
    "xgboost>=1.7",
    "lightgbm>=3.3",
    "keras>=3.0",
]

viz = [
    "matplotlib>=3.5",
    "plotly>=5.0",
]

[project.scripts]
foodspec = "foodspec.cli.main:app"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--strict-markers -v"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
branch = true
source = ["foodspec"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
